--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,15 +75,15 @@ jobs:
           prerelease: false
           args: ${{ matrix.args }}
 
-      # 使用保存的路径查找 deb 文件
+      # 修复：使用正确的路径查找 deb 文件
       - name: 检查 deb 文件并上传 Ubuntu 构建产物
         if: matrix.platform == 'ubuntu-24.04'
         run: |
           WORKSPACE="${{ steps.workspace.outputs.path }}"
           echo "工作目录: $WORKSPACE"
 
-          # 使用绝对路径查找
-          DEB_PATH="$WORKSPACE/src-tauri/target/release/bundle/deb"
+          # Tauri 的构建输出在项目根目录的 target 下，而不是 src-tauri/target
+          DEB_PATH="$WORKSPACE/target/release/bundle/deb"
           echo "检查路径: $DEB_PATH"
 
           if [ -d "$DEB_PATH" ]; then
@@ -104,7 +104,7 @@ jobs:
             echo "尝试查找所有可能的路径:"
             find "$WORKSPACE" -path "*/bundle/deb/*.deb" -type f 2>/dev/null || echo "未找到"
             exit 1
-            fi
+          fi
 
       - name: 上传 Ubuntu 构建产物
         if: matrix.platform == 'ubuntu-24.04'
@@ -112,8 +112,8 @@ jobs:
         with:
           name: ubuntu-build
           path: |
-            ${{ steps.workspace.outputs.path }}/src-tauri/target/release/bundle/deb/*.deb
-            ${{ steps.workspace.outputs.path }}/src-tauri/target/release/bundle/appimage/*.AppImage
+            ${{ steps.workspace.outputs.path }}/target/release/bundle/deb/*.deb
+            ${{ steps.workspace.outputs.path }}/target/release/bundle/appimage/*.AppImage
           if-no-files-found: error
 
   # Arch Linux 打包任务
