--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,6 +117,7 @@ jobs:
           if-no-files-found: error
 
     # Arch Linux 打包任务 - 修复 sudo 权限问题
+  # Arch Linux 打包任务 - 修复本地文件使用
   build-arch-package:
     needs: publish-tauri
     runs-on: ubuntu-latest
@@ -175,7 +176,7 @@ jobs:
             archlinux:latest \
             sleep infinity
 
-          # 创建 builder 用户（但不需要配置 sudo，因为我们会直接切换用户）
+          # 创建 builder 用户
           docker exec arch-builder bash -c "
             useradd -m builder
           "
@@ -258,23 +259,27 @@ jobs:
           docker cp PKGBUILD arch-builder:/workspace/
           [ -f "sealantern.install" ] && docker cp sealantern.install arch-builder:/workspace/
 
-          # 在容器中执行打包 - 修复：移除 sudo，直接使用 builder 用户运行
+          # 在容器中执行打包 - 使用本地 deb 文件
           docker exec arch-builder bash -c "
             cd /workspace && \
+
+            # 修改 PKGBUILD，使用本地文件而不是 URL
+            sed -i 's|^source=.*|source=(\"sealantern.deb\")|' PKGBUILD && \
+            sed -i 's|^sha256sums=.*|sha256sums=(\"SKIP\")|' PKGBUILD && \
 
             # 更新版本号
             sed -i 's/^pkgver=.*/pkgver=$VERSION/' PKGBUILD && \
             sed -i 's/^pkgrel=.*/pkgrel=1/' PKGBUILD && \
 
             # 显示 PKGBUILD 内容用于调试
-            echo '=== PKGBUILD 内容 ==='
+            echo '=== 修改后的 PKGBUILD 内容 ==='
             cat PKGBUILD
-            echo '===================='
+            echo '============================='
 
             # 更改文件所有权给 builder 用户
             chown -R builder:builder /workspace
 
-            # 以 builder 用户运行 makepkg（使用 su 替代 sudo）
+            # 以 builder 用户运行 makepkg
             su - builder -c 'cd /workspace && makepkg -f --noconfirm'
           "
 
