fix: install Sea Lantern directly in postinst without install.sh script

--- a/.github/workflows/build-and-upload-ppa.yml
+++ b/.github/workflows/build-and-upload-ppa.yml
@@ -255,7 +255,7 @@ jobs:
           RULES
           chmod +x "${SOURCE_DIR}/debian/rules"
           
-          # Create postinst script
+          # Create postinst script - directly install Sea Lantern
           cat > "${SOURCE_DIR}/debian/postinst" << 'POSTINST'
           #!/bin/bash
           set -e
@@ -267,32 +267,17 @@ jobs:
           
           EMBEDDED_DEB="/opt/sealantern/Sea.Lantern_${PACKAGE_VERSION}_amd64.deb"
           
-          echo "Sea Lantern PPA updater package installed."
-          echo "Please run the following command to install Sea Lantern:"
-          echo "  sudo /opt/sealantern/install.sh"
-          
-          # Create installation script
-          cat > /opt/sealantern/install.sh << 'INSTALLSCRIPT'
-          #!/bin/bash
-          PACKAGE_VERSION=$(dpkg -s sea-lantern-ppa-updater 2>/dev/null | grep Version | awk '{print $2}' | sed 's/~.*$//')
-          if [ -z "$PACKAGE_VERSION" ]; then
-              PACKAGE_VERSION="0.6.5"
-          fi
-          
-          EMBEDDED_DEB="/opt/sealantern/Sea.Lantern_${PACKAGE_VERSION}_amd64.deb"
-          
           echo "正在安装 Sea Lantern ${PACKAGE_VERSION}..."
           
           if [ -f "$EMBEDDED_DEB" ]; then
-              # 只解压文件，不进行任何 dpkg 操作
+              # 解压文件到根目录，不使用 dpkg 安装
               ar p "$EMBEDDED_DEB" data.tar.zst 2>/dev/null | tar --zstd -x -C / 2>/dev/null || \
               ar p "$EMBEDDED_DEB" data.tar.xz 2>/dev/null | tar -xJ -C / 2>/dev/null || \
               ar p "$EMBEDDED_DEB" data.tar.gz 2>/dev/null | tar -xz -C / 2>/dev/null
               
               rm -f "$EMBEDDED_DEB"
-              rm -f /opt/sealantern/install.sh
               
-              echo "✅ Sea Lantern 文件已解压！"
+              echo "✅ Sea Lantern 已安装！"
               echo "运行命令: sea-lantern"
               
               # 更新桌面数据库
@@ -304,11 +289,7 @@ jobs:
               fi
           else
               echo "❌ 找不到嵌入的包文件: $EMBEDDED_DEB"
-              exit 1
           fi
-          INSTALLSCRIPT
-          
-          chmod +x /opt/sealantern/install.sh
           POSTINST
           chmod +x "${SOURCE_DIR}/debian/postinst"
           
