fix: update desktop and icon cache in prerm script

--- a/.github/workflows/build-and-upload-ppa.yml
+++ b/.github/workflows/build-and-upload-ppa.yml
@@ -311,6 +311,15 @@ jobs:
               # 删除临时文件
               rm -f /opt/sealantern/install.sh
               
+              # 更新桌面数据库
+              if command -v update-desktop-database >/dev/null 2>&1; then
+                  update-desktop-database /usr/share/applications 2>/dev/null || true
+              fi
+              # 更新图标缓存
+              if command -v gtk-update-icon-cache >/dev/null 2>&1; then
+                  gtk-update-icon-cache -f -t /usr/share/icons/hicolor 2>/dev/null || true
+              fi
+              
               echo "✅ Sea Lantern 文件已删除"
           fi
           PRERM
