--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -245,8 +245,7 @@ jobs:
               libthai \
               libice \
               libsm \
-              util-linux \
-              util-linux-libs
+              util-linux 
           "
           echo "✅ Arch Linux 容器依赖安装完成"
 
