feat: 完善 PPA 测试流程和修复 postinst 脚本
- 修复 postinst 中版本号获取问题（使用 dpkg-query 替代 dpkg -s）
- 创建本地测试脚本 test-ppa-install.sh
- 创建 GitHub Actions 测试工作流 ppa-test.yml
- 创建 gh CLI 便捷命令脚本 scripts/ppa-gh-commands.sh
- 更新 AGENTS.md 添加 PPA 测试流程文档
- 添加 issue-killer、issue-triage、pr-review 工作流

--- a/.github/workflows/build-and-upload-ppa.yml
+++ b/.github/workflows/build-and-upload-ppa.yml
@@ -254,14 +254,16 @@ jobs:
           RULES
           chmod +x "${SOURCE_DIR}/debian/rules"
           
-          # Create postinst script - directly install Sea Lantern
-          cat > "${SOURCE_DIR}/debian/postinst" << 'POSTINST'
+                    # Create postinst script - directly install Sea Lantern
+                    cat > "${SOURCE_DIR}/debian/postinst" << 'POSTINST'
           #!/bin/bash
           set -e
           
-          PACKAGE_VERSION=$(dpkg -s sea-lantern-ppa-updater 2>/dev/null | grep Version | awk '{print $2}' | sed 's/~.*$//')
+          # 获取已安装的包版本号 - 使用 dpkg-query 更可靠
+          PACKAGE_VERSION=$(dpkg-query -W -f='${Version}' sea-lantern-ppa-updater 2>/dev/null | sed 's/~.*$//')
           if [ -z "$PACKAGE_VERSION" ]; then
-              PACKAGE_VERSION="0.6.5"
+              # 如果无法获取，尝试从已解压的文件推断
+              PACKAGE_VERSION="${VERSION}"
           fi
           
           EMBEDDED_DEB="/opt/sealantern/Sea.Lantern_${PACKAGE_VERSION}_amd64.deb"
@@ -273,12 +275,12 @@ jobs:
               ar p "$EMBEDDED_DEB" data.tar.zst 2>/dev/null | tar --zstd -x -C / 2>/dev/null || \
               ar p "$EMBEDDED_DEB" data.tar.xz 2>/dev/null | tar -xJ -C / 2>/dev/null || \
               ar p "$EMBEDDED_DEB" data.tar.gz 2>/dev/null | tar -xz -C / 2>/dev/null
-              
+          
               rm -f "$EMBEDDED_DEB"
-              
+          
               echo "✅ Sea Lantern 已安装！"
               echo "运行命令: sea-lantern"
-              
+          
               # 更新桌面数据库
               if command -v update-desktop-database >/dev/null 2>&1; then
                   update-desktop-database /usr/share/applications 2>/dev/null || true
@@ -288,9 +290,9 @@ jobs:
               fi
           else
               echo "❌ 找不到嵌入的包文件: $EMBEDDED_DEB"
+              echo "请检查安装包是否完整"
           fi
-          POSTINST
-          chmod +x "${SOURCE_DIR}/debian/postinst"
+          POSTINST          chmod +x "${SOURCE_DIR}/debian/postinst"
           
           # Create prerm script
           cat > "${SOURCE_DIR}/debian/prerm" << 'PRERM'
