--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "echarts": "^6.0.0",
     "lucide-vue-next": "^0.574.0",
     "pinia": "^3.0.4",
+    "reka-ui": "^2.8.2",
     "simple-icons": "^16.9.0",
     "vue": "^3.5.28",
     "vue-echarts": "^8.0.1",
