--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sass-embedded": "^1.97.3",
     "terser": "^5.46.0",
     "typescript": "~5.6.3",
+    "unplugin-icons": "^23.0.1",
     "vite": "^6.4.1",
     "vue-tsc": "^3.2.5"
   }
