--- a/.github/workflows/format-and-apply.yml
+++ b/.github/workflows/format-and-apply.yml
@@ -33,6 +33,10 @@ jobs:
         with:
           node-version: "lts/*"
 
+      - name: Enable Corepack
+        run: |
+          corepack enable
+
       - name: 安装 Rust 工具链 (包含 rustfmt)
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -40,7 +44,8 @@ jobs:
 
       - name: 安装前端依赖
         run: |
-          npm i -g pnpm
+          corepack enable
+          corepack prepare pnpm@9.15.9 --activate
           pnpm install --frozen-lockfile
 
       - name: 并行运行前端 & 后端 格式化
