feat: 更新前端工作流以准备 PNPM 固定版本并移除多余的 Corepack 启用步骤

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -106,10 +106,11 @@ jobs:
         with:
           node-version: "lts/*"
 
-      - name: Enable Corepack
+      - name: Prepare PNPM (固定版本)
         if: ${{ needs.changes.outputs.frontend == 'true' }}
         run: |
           corepack enable
+          corepack prepare pnpm@9.15.9 --activate
       - name: Pin PNPM version with Corepack
         if: ${{ needs.changes.outputs.frontend == 'true' }}
         run: |
@@ -127,7 +128,6 @@ jobs:
       - name: 安装前端依赖
         if: ${{ needs.changes.outputs.frontend == 'true' }}
         run: |
-          corepack enable
           pnpm install --frozen-lockfile
 
       - name: 运行格式化并检查前端 Lint
