fix: 全面迁移至 pnpm
- package.json 添加 packageManager 字段锁定 pnpm@9.15.9
- package.json 添加 pnpm.onlyBuiltDependencies 配置
- 删除 pnpm-workspace.yaml 避免误判为 monorepo
- tauri.conf.json beforeDevCommand/beforeBuildCommand 改用 pnpm
- CI workflows 使用 corepack enable 替代 npm i -g pnpm

Closes #317

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -118,7 +118,7 @@ jobs:
       - name: 安装前端依赖
         if: ${{ needs.changes.outputs.frontend == 'true' }}
         run: |
-          npm i -g pnpm
+          corepack enable
           pnpm install --frozen-lockfile
 
       - name: 运行格式化并检查前端 Lint
