--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sea-lantern",
   "version": "0.6.5",
-  "packageManager": "pnpm@9.15.9",
   "private": true,
   "type": "module",
   "scripts": {
@@ -37,6 +36,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.10.0",
+    "@types/node": "^25.3.0",
     "@vitejs/plugin-vue": "^6.0.4",
     "oxfmt": "^0.34.0",
     "oxlint": "^1.49.0",
@@ -46,5 +46,6 @@
     "unplugin-icons": "^23.0.1",
     "vite": "^7.3.1",
     "vue-tsc": "^3.2.5"
-  }
+  },
+  "packageManager": "pnpm@9.15.9"
 }
