fix: 添加语言和主题的路径别名，提升代码一致性

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,12 @@
       "@components/*": ["src/components/*"],
       "@composables/*": ["src/composables/*"],
       "@data/*": ["src/data/*"],
+      "@language": ["src/language"],
       "@language/*": ["src/language/*"],
       "@router/*": ["src/router/*"],
       "@stores/*": ["src/stores/*"],
       "@styles/*": ["src/styles/*"],
+      "@themes": ["src/themes"],
       "@themes/*": ["src/themes/*"],
       "@type/*": ["src/types/*"],
       "@utils/*": ["src/utils/*"],
