--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,6 +43,10 @@ tauri-plugin-window-state = "2"
 window-vibrancy = "0.5"
 font-kit = "0.14"
 sysinfo = "0.32"
+axum = "0.8"
+tower = "0.5"
+tower-http = { version = "0.6", features = ["fs", "cors"] }
+mime_guess = "2.0"
 regex = "1.10"
 futures = "0.3.32"
 indicatif = "0.18.4"
