feat: 添加 docker-entry 可执行文件配置

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2021"
 name = "sea_lantern_lib"
 crate-type = ["lib", "cdylib", "staticlib"]
 
+[[bin]]
+name = "docker-entry"
+path = "src/bin/docker-entry.rs"
+
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
 
