docs(issues): 添加了 `yml` 格式的Issue模板

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -20,7 +20,7 @@ body:
       description: 可选 - 如何重现这个问题
       placeholder: 这里写你的复现步骤
     validations:
-      required: false
+      required: true
 
   - type: textarea
     id: expected
