为#400更新关于版本发布的workflows(暂时先添加Linux)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -270,7 +270,7 @@ jobs:
             sed -i 's|^sha256sums=.*|sha256sums=(\"SKIP\")|' PKGBUILD && \
 
             # 修改 package() 函数中的文件名
-            sed -i 's|Sea\.Lantern_\${pkgver}_amd64\.deb|sealantern.deb|g' PKGBUILD && \
+            sed -i 's|Sea\.Lantern_\${pkgver}_amd64_Linux\.deb|sealantern.deb|g' PKGBUILD && \
 
             # 更新版本号
             sed -i 's/^pkgver=.*/pkgver=$VERSION/' PKGBUILD && \
