--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,13 +25,13 @@ jobs:
             args: ""
             arch: "amd64"
           - platform: "ubuntu-24.04-arm"
-            args: "--target aarch64-unknown-linux-gnu"
+            args: ""
             arch: "arm64"
           - platform: "windows-latest"
             args: ""
             arch: "amd64"
           - platform: "windows-11-arm"
-            args: "--target aarch64-pc-windows-msvc"
+            args: ""
             arch: "arm64"
 
     runs-on: ${{ matrix.platform }}
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 安装系统依赖 (Ubuntu 专用)
-        if: matrix.platform == 'ubuntu-24.04'
+        if: matrix.platform == 'ubuntu-24.04' || matrix.platform == 'ubuntu-24.04-arm'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
@@ -57,7 +57,7 @@ jobs:
       - name: 安装 Rust 工具链
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || (matrix.platform == 'ubuntu-24.04-arm' && 'aarch64-unknown-linux-gnu' || (matrix.platform == 'windows-11-arm' && 'aarch64-pc-windows-msvc' || '')) }}
+          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
       - name: 缓存 Rust 编译产物
         uses: swatinem/rust-cache@v2
