--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "sea-lantern"
 version = "0.6.5"
 description = "Minecraft Server Manager"
-authors = ["FPS_Z"]
+authors = ["FPS_Z and MORE"]
 edition = "2021"
 
 [lib]
@@ -10,6 +10,7 @@ name = "sea_lantern_lib"
 crate-type = ["lib", "cdylib", "staticlib"]
 
 [build-dependencies]
+nasm-rs = "0.3.1"
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
@@ -36,6 +37,8 @@ uuid = { version = "1", features = ["v4"] }
 dirs-next = "2"
 reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
 opener = "0.7"
+lazy_static = "1.5.0"
+cc = "1.2.47"
 tauri-plugin-updater = "2.10.0"
 tauri-plugin-process = "2.3.1"
 tauri-plugin-http = "2.5.7"
@@ -45,7 +48,7 @@ font-kit = "0.14"
 sysinfo = "0.32"
 regex = "1.10"
 futures = "0.3.32"
-indicatif = "0.18.4"
+indicatif = "0.18.3"
 sha2 = "0.10"
 encoding_rs = "0.8"
 mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }
@@ -62,11 +65,17 @@ image = { version = "0.25", default-features = false, features = [
     "bmp",
     "ico",
 ] }
-notify = { version = "6.0", optional = true }
+notify = { version = "8.2.0", optional = true }
+shlex = "1.3.0"
+nasm-rs = "0.3.1"
+
+[target.'cfg(linux)'.dependencies]
+lazy_static = "1.5.0"
+nasm-rs = "0.3.1"
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.58", features = ["Win32_System_Performance", "Win32_Foundation"] }
-winreg = "0.52"
+windows = { version = "0.62.2", features = ["Win32_System_Performance", "Win32_Foundation"] }
+winreg = "0.55.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
