--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -46,7 +46,7 @@ tauri-plugin-window-state = "2"
 window-vibrancy = "0.5"
 font-kit = "0.14"
 sysinfo = "0.32"
-axum = "0.8"
+axum = { version = "0.8", features = ["multipart"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["fs", "cors"] }
 mime_guess = "2.0"
@@ -70,10 +70,7 @@ image = { version = "0.25", default-features = false, features = [
 url = "2.5"
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.58", features = [
-    "Win32_System_Performance",
-    "Win32_Foundation",
-] }
+windows = { version = "0.58", features = ["Win32_System_Performance", "Win32_Foundation"] }
 winreg = "0.52"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
