--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,10 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      # 持久化数据目录
-      - sealantern_data:/app/data
+      # 数据穿透挂载 - 宿主机目录直接映射到容器
+      - ./data:/app/data
+      # 持久化数据目录（命名卷，可选）
+      # - sealantern_data:/app/data
       # 可选：挂载 Minecraft 服务器目录
       # - ./servers:/app/servers
     environment:
@@ -21,6 +23,6 @@ services:
       retries: 3
       start_period: 10s
 
-volumes:
-  sealantern_data:
-    driver: local
+# volumes:
+#   sealantern_data:
+#     driver: local
