--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -62,6 +62,8 @@ image = { version = "0.25", default-features = false, features = [
 url = "2.5"
 rusqlite = { version = "0.32", features = ["bundled"] }
 ipnet = "2.10"
+chrono = "0.4"
+lazy_static = "1.4"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58", features = ["Win32_System_Performance", "Win32_Foundation"] }
