ci: 将 CI Runner 从 ubuntu-24 统一切换至 22.04

--- a/.github/workflows/aur-publish.yml
+++ b/.github/workflows/aur-publish.yml
@@ -10,7 +10,7 @@ permissions:
 jobs:
   aur-publish:
     name: 发布到 AUR
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     container:
       image: archlinux:latest
       options: --user root
