--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   validate-tag:
     name: 校验 Tag 来源并提取版本
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     outputs:
       tag: ${{ steps.meta.outputs.tag }}
       version: ${{ steps.meta.outputs.version }}
@@ -60,10 +60,10 @@ jobs:
             args: "--target aarch64-apple-darwin"
           - platform: "macos-latest"
             args: "--target x86_64-apple-darwin"
-          - platform: "ubuntu-24.04"
+          - platform: "ubuntu-22.04"
             args: ""
             arch: "amd64"
-          - platform: "ubuntu-24.04-arm"
+          - platform: "ubuntu-22.04-arm"
             args: ""
             arch: "arm64"
           - platform: "windows-latest"
@@ -79,7 +79,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 安装系统依赖 (Ubuntu 专用)
-        if: matrix.platform == 'ubuntu-24.04' || matrix.platform == 'ubuntu-24.04-arm'
+        if: matrix.platform == 'ubuntu-22.04' || matrix.platform == 'ubuntu-22.04-arm'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf xdg-utils nasm
@@ -132,7 +132,7 @@ jobs:
           args: ${{ matrix.args }}
 
       - name: 上传 Ubuntu x64 构建产物 (用于 Arch 打包)
-        if: matrix.platform == 'ubuntu-24.04'
+        if: matrix.platform == 'ubuntu-22.04'
         uses: actions/upload-artifact@v4
         with:
           name: ubuntu-build-x64
@@ -144,7 +144,7 @@ jobs:
   build-arch-package:
     name: 构建 Arch 包并上传 Release
     needs: [validate-tag, publish-tauri]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     container:
       image: archlinux:latest
       options: --user root
