--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,6 +5,9 @@ description = "Minecraft Server Manager"
 authors = ["FPS_Z"]
 edition = "2021"
 
+[features]
+cli = []
+
 [lib]
 name = "sea_lantern_lib"
 crate-type = ["lib", "cdylib", "staticlib"]
@@ -64,6 +67,8 @@ url = "2.5"
 rusqlite = { version = "0.32", features = ["bundled"] }
 nasm-rs = "0.3.1"
 shlex = "1.3.0"
+clap = { version = "4", features = ["derive"] }
+chrono = "0.4"
 
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
 nasm-rs = "0.3.1"
